--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                         <div class="sub-zone">
                             <h4>Ton Sprint</h4>
                             <div id="recap-sprint" class="mini-list">Pas encore validé</div>
-                            <div id="btn-edit-sprint-container"></div> </div>
+                            <div id="btn-edit-sprint-container"></div>
                         </div>
                         <div class="sub-zone">
                             <h4>Ton Grand Prix</h4>
                             <div id="recap-race" class="mini-list">Pas encore validé</div>
-                            <div id="btn-edit-race-container"></div> </div>
+                            <div id="btn-edit-race-container"></div>
                         </div>
                     </div>
                 </div>
@@ -106,17 +106,6 @@
                         <button class="btn-valider" onclick="validerCourse('Race')">Valider le Grand Prix</button>
                     </div>
                 </div>
-
-                <div id="recap-container" class="hidden">
-                    <div class="ticket">
-                        <h3>🎟️ Ton Ticket de Pari</h3>
-                        <div id="recap-content"></div>
-                        <button class="btn-valider" onclick="fermerRecap()">Continuer</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="script.js"></script>
+            </div> </div> </div> <script src="script.js"></script>
 </body>
 </html>
