admin page + option modif

--- a/index.html
+++ b/index.html
@@ -34,17 +34,15 @@
             </div>
 
             <div class="stats-flex-container">
-                <div class="stats-column">
-                    <h2>🏁 Statut Sessions</h2>
-                    <div class="results-box">
-                        <div class="sub-zone">
-                            <h4>Sprint</h4>
-                            <div id="timer-sprint-val-label" class="timer-live">Calcul...</div>
-                        </div>
-                        <div class="sub-zone">
-                            <h4>Grand Prix</h4>
-                            <div id="timer-race-val-label" class="timer-live">Calcul...</div>
-                        </div>
+                <div id="official-results-container" class="results-box">
+                    <h2>🏆 Résultats Officiels</h2>
+                    <div class="sub-zone">
+                        <h4>Sprint</h4>
+                        <div id="official-sprint">En attente...</div>
+                    </div>
+                    <div class="sub-zone">
+                        <h4>Grand Prix</h4>
+                        <div id="official-race">En attente...</div>
                     </div>
                 </div>
 
