admin déroulant + full calendrier + stats + timer good place

--- a/admin.html
+++ b/admin.html
@@ -23,11 +23,11 @@
             <option value="Race">Grand Prix</option>
         </select>
 
-        <div class="grid-admin">
-            <input type="text" id="res-1" placeholder="Vainqueur (Nom)">
-            <input type="text" id="res-2" placeholder="2ème (Nom)">
-            <input type="text" id="res-3" placeholder="3ème (Nom)">
-            <input type="text" id="res-chute" placeholder="Pilote tombé">
+        <div class="grid-admin" id="res-pilotes">
+            <select id="res-1"><option value="">🥇 1er (Vainqueur)</option></select>
+            <select id="res-2"><option value="">🥈 2ème</option></select>
+            <select id="res-3"><option value="">🥉 3ème</option></select>
+            <select id="res-chute"><option value="">⚠️ Pilote tombé</option></select>
         </div>
 
         <button class="btn-valider" id="btn-publier">Publier les résultats</button>
