update drag and drop

--- a/admin.html
+++ b/admin.html
@@ -20,7 +20,10 @@
 <body>
 
     <div class="admin-box">
-        <h1>🏆 Entrer les Résultats</h1>
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+            <h1>🏆 Entrer les Résultats</h1>
+            <a href="index.html" style="color: #e10600; text-decoration: none; font-size: 1.2em; font-weight: bold;">← Retour</a>
+        </div>
         
         <label>Code d'accès :</label>
         <input type="password" id="admin-pass" placeholder="Mot de passe admin">
