--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="login-box">
             <h3>Entrez votre nom de pilote</h3>
             <input type="text" id="pseudo-input" placeholder="Pseudo..." maxlength="15">
-            <button class="btn-valider" id="btn-rejoindre">Rejoindre le Paddock</button>
+            <button class="btn-valider" id="btn-valider">Rejoindre le Paddock</button>
         </div>
     </div>
 
